@@ -3,6 +3,7 @@
 - Add uploadimg function in utils class (Voltan)
 - Add setpermission function in perm class (Voltan)
 - Add upload image for topics (Voltan)
+- Add delete option for images (Voltan)
 
 1.05
 =================================
